Fix external link logo alignment

--- a/scss/theme/_menu.scss
+++ b/scss/theme/_menu.scss
@@ -51,6 +51,7 @@
 	    display: inline-block;
 	    width: 16px;
 	    height: 16px;
+	    margin-top: -2px
 	}
       }
 
